[package]
name = "xcb-util-cursor"
version = "0.3.1"
authors = ["Julius Kreutz <julius@kreutz.dev>"]
edition = "2021"
description = "Bindings to libxcb-cursor."
documentation = "https://docs.rs/xcb-util-cursor"
readme = "README.md"
homepage = "https://github.com/JuliusKreutz/xcb-util-cursor-rs"
repository = "https://github.com/JuliusKreutz/xcb-util-cursor-rs"
license = "MIT/Apache-2.0"
keywords = ["xcb"]
categories = ["api-bindings"]

[lib]
name = "xcb_util_cursor"
path = "src/lib.rs"

[dependencies]
xcb = "1.2.0"

[dependencies.xcb-util-cursor-sys]
version = "0.1.2"
path = "xcb-util-cursor-sys"
