[package]
name = "xcb-util-cursor-sys"
version = "0.1.3"
authors = ["Julius Kreutz <julius@kreutz.dev>"]
edition = "2021"
description = "Bindings to libxcb-cursor."
documentation = "https://docs.rs/xcb-util-cursor-sys"
readme = "README.md"
homepage = "https://github.com/JuliusKreutz/xcb-util-cursor-rs"
repository = "https://github.com/JuliusKreutz/xcb-util-cursor-rs"
license = "MIT/Apache-2.0"
categories = ["external-ffi-bindings"]
links = "xcb-cursor"

[lib]
name = "xcb_util_cursor_sys"
path = "src/lib.rs"

[dependencies]
xcb = "1.4.0"

[build-dependencies]
bindgen = "0.69.4"
